--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@ basic page
     <body>
         <h1>HI I AM ADITYA</h1>
         <p>I am from pune <br>I am 19 yrs old<br>I'll join full stack developer course to develop my skills</p>
+        <h1 style="text-align: center;color: aquamarine;">REGISTRATION FORM</h1>
+            <form>
+                
     </body>
+    <button style="background-color: aqua;">SUBMIT</button>
