--- a/ANIMINATION.html
+++ b/ANIMINATION.html
@@ -7,6 +7,10 @@
 <link rel="stylesheet" href="animination.css">
 </head>
 <body>
-<div class="box"></div>
+<div class="animation">
+    <div class=image>
+        <img src="hand-drawn-animal-silhouette-illustration_23-2149561187.avif">
+        </div>
+</div>
 </body>
 </html>
